packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_class_name.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2649
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const App2 = component$(() => {
	const signal = useSignal();
	const computed = signal.value + 'foo';
	return (
		<>
			<div className="hola"></div>
			<div className={signal.value}></div>
			<div className={signal}></div>
			<div className={computed}></div>

			<Foo className="hola"></Foo>
			<Foo className={signal.value}></Foo>
			<Foo className={signal}></Foo>
			<Foo className={computed}></Foo>
		</>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App2_component_3yveMqbQ3Fs = /*#__PURE__*/ qrl(()=>import("./test.tsx_App2_component_3yveMqbQ3Fs.js"), "App2_component_3yveMqbQ3Fs");
//
export const App2 = /*#__PURE__*/ componentQrl(q_App2_component_3yveMqbQ3Fs);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,qBAAO,2CAgBjB\"}")
============================= test.tsx_App2_component_3yveMqbQ3Fs.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
//
export const App2_component_3yveMqbQ3Fs = ()=>{
    const signal = useSignal();
    const computed = signal.value + 'foo';
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", null, {
            "class": "hola"
        }, null, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, {
            "class": _wrapProp(signal)
        }, null, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, {
            "class": signal
        }, null, 3, null),
        /*#__PURE__*/ _jsxSorted("div", {
            "class": computed
        }, null, null, 3, null),
        /*#__PURE__*/ _jsxSorted(Foo, null, {
            className: "hola"
        }, null, 3, "u6_0"),
        /*#__PURE__*/ _jsxSorted(Foo, null, {
            className: _wrapProp(signal)
        }, null, 3, "u6_1"),
        /*#__PURE__*/ _jsxSorted(Foo, null, {
            className: signal
        }, null, 3, "u6_2"),
        /*#__PURE__*/ _jsxSorted(Foo, {
            className: computed
        }, null, null, 3, "u6_3")
    ], 1, "u6_4");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;0CAG+B;IAC9B,MAAM,SAAS;IACf,MAAM,WAAW,OAAO,KAAK,GAAG;IAChC,qBACC;sBACC,WAAC;YAAI,SAAU;;sBACf,WAAC;YAAI,OAAS,YAAE;;sBAChB,WAAC;YAAI,SAAW;;sBAChB,WAAC;YAAI,SAAW;;sBAEhB,WAAC;YAAI,WAAU;;sBACf,WAAC;YAAI,SAAS,YAAE;;sBAChB,WAAC;YAAI,WAAW;;sBAChB,WAAC;YAAI,WAAW;;;AAGnB\"}")
/*
{
  "origin": "test.tsx",
  "name": "App2_component_3yveMqbQ3Fs",
  "entry": null,
  "displayName": "test.tsx_App2_component",
  "hash": "3yveMqbQ3Fs",
  "canonicalFilename": "test.tsx_App2_component_3yveMqbQ3Fs",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    467
  ]
}
*/
== DIAGNOSTICS ==

[]
